--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Mohamed Shaah Ahmed</h1>
     <p>I have just made a page on gtihub</p>
+    <p>I have just made a page on gtihub</p>
+    <p>I have just made a page on gtihub</p>
 </body>
 </html>
