uploaded new website

--- a/index.html
+++ b/index.html
@@ -1,35 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:400,600" rel="stylesheet">
-  
-  <title>Test Navbar</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Template-Coffee</title>
 </head>
 
 <body>
 
-  <header>
+    <header>
+        <div class="container">
+            <div class="header logo">
+                <h1>
+                    <a href="#">logo</a>
+                </h1>
+            </div>
+            <nav class="header nav">
+                <a href="#" class="nav-item1">about us</a>
+                <a href="#" class="nav-item2">contact</a>
+            </nav>
+        </div>
+    </header>
     <div class="container">
-      <!-- header name/logo -->
-      <h1><a href="index.html">My logo</a></h1>
-      <!-- navbar items -->
-      <nav>
-        <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">links</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">contact</a></li>
-        </ul>
-      </nav>
+        <section class="left">
+            <img src="./img/coffee.png" alt="An image of a coffee cup and coffee beans">
+            <h2>&quot;A liquid hug for your brain.&quot;</h2>
+            <h2>&quot;May your coffee kick in before reality does&quot;</h2>
+        </section>
 
+        <section class="right">
+            <h1>coffee</h1>
+            <div class="line"></div>
+            <p>Coffee is a brewed drink prepared from roasted coffee beans, which are the seeds of berries from the Coffea plant.
+                The genus Coffea is native to tropical Africa (specifically having its origin in Ethiopia and Sudan) and
+                Madagascar, the Comoros, Mauritius, and Réunion in the Indian Ocean.</p>
 
+        </section>
     </div>
-  </header>
 
+    <footer>
+        <div class="container">
+            <div class="copyright">
+                <h3>copyright&copy; 2017</h3>
+            </div>
+            <div class="social">
+                <div class="linkdin"></div>
+                <div class="twitter"></div>
+                <div class="pinterest"></div>
+                <div class="facebook"></div>
+                <div class="instagram"></div>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
