--- a/index.html
+++ b/index.html
@@ -2,61 +2,94 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/main.css">
-    <title>Template-Coffee</title>
+
+    <link rel="stylesheet" href="./css/vendor/normalize.css">
+    <link rel="stylesheet" href="./css/vendor/animate.css">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <script src="https://use.fontawesome.com/aa106c1952.js"></script>
+
+
+    <title>Design and Development</title>
+
 </head>
 
 <body>
 
-    <header>
-        <div class="container">
-            <div class="header logo">
-                <h1>
-                    <a href="#">logo</a>
-                </h1>
-            </div>
-            <nav class="header nav">
-                <a href="#" class="nav-item1">about us</a>
-                <a href="#" class="nav-item2">contact</a>
-            </nav>
+    <div class="header">
+        <nav class="main-nav">
+
+
+            <a href="#">About</a>
+            <a href="#">Gallery</a>
+            <a href="#">Contact</a>
+
+        </nav>
+
+        <div class="hero">
+            <h1 class="main-header" id="main-header">be different</h1>
+            <p class="main-text" id="main-text">Be daring, be different, be impractical, be anything that will assert integrity of purpose and imaginative vision
+                against the play-it-safers, the creatures of the commonplace, the slaves of the ordinary.</p>
         </div>
-    </header>
-    <div class="container">
-        <section class="left">
-            <img src="./img/coffee.png" alt="An image of a coffee cup and coffee beans">
-            <h2>&quot;A liquid hug for your brain.&quot;</h2>
-            <h2>&quot;May your coffee kick in before reality does&quot;</h2>
-        </section>
 
-        <section class="right">
-            <h1>coffee</h1>
-            <div class="line"></div>
-            <p>Coffee is a brewed drink prepared from roasted coffee beans, which are the seeds of berries from the Coffea plant.
-                The genus Coffea is native to tropical Africa (specifically having its origin in Ethiopia and Sudan) and
-                Madagascar, the Comoros, Mauritius, and Réunion in the Indian Ocean.</p>
+        <div class="hero">
+            <h1 class="main-header1" id="main-header1">try harder</h1>
+            <p class="main-text1" id="main-text1">Work hard for what you want because it won't come to you without a fight. You have to be strong and courageous
+                and know that you can do anything you put your mind to.</p>
+        </div>
 
-        </section>
+        <div class="hero">
+            <h1 class="main-header2" id="main-header2">be constant</h1>
+            <p class="main-text2" id="main-text2">It is the small things done consistently that makes the biggest impact in your life</p>
+        </div>
+
     </div>
 
-    <footer>
-        <div class="container">
-            <div class="copyright">
-                <h3>copyright&copy; 2017</h3>
-            </div>
-            <div class="social">
-                <div class="linkdin"></div>
-                <div class="twitter"></div>
-                <div class="pinterest"></div>
-                <div class="facebook"></div>
-                <div class="instagram"></div>
-            </div>
+    <div class="content">
+        <div class="content-title">
+            <h1 class="content-header" id="content-header">grow with us</h1>
+            <p class="content-text" id="content-text">Become a part of something great. Join us and together, we can help you grow your business from a simple local
+                business to a far and widespread and recognizable brand both locally and internationally</p>
         </div>
-    </footer>
+
+
+        <div class="section-info">
+            <div class="section-content">
+                <i class="fa fa-code" aria-hidden="true"></i>
+                <h2 class="section-header">We code</h2>
+                <p class="section-text">With proficiency in the most prominent coding languages of the web we can bring your ideas and present them
+                    in a neat little web page</p>
+            </div>
+            <div class="section-content">
+                <i class="fa fa-paint-brush" aria-hidden="true"></i>
+                <h2 class="section-header">We design</h2>
+                <p class="section-text">Using the latest technologies and creative ideas, we can bring your ideas into life</p>
+            </div>
+            <div class="section-content">
+                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                    <h2 class="section-header">We deliver</h2>
+                    <p class="section-text">We respect your time and schedule. So our team would work day and night to get you the results you need, on time and efficiently</p>
+            </div>
+            
+
+        </div>
+
+    </div>
+
+
+
+
+
+
 
 
 </body>
+
+<script src="./js/noframework.waypoints.min.js"></script>
+<script src="./js/main.js"></script>
 
 </html>
