--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p class="main-text1" id="main-text1">Work hard for what you want because it won't come to you without a fight. You have to be strong and courageous
                 and know that you can do anything you put your mind to.</p>
         </div>
-
+                                           
         <div class="hero">
             <h1 class="main-header2" id="main-header2">be constant</h1>
             <p class="main-text2" id="main-text2">It is the small things done consistently that makes the biggest impact in your life</p>
@@ -53,7 +53,7 @@
     <!-- ==================================================================== -->
 
     <div class="content">
-        <div class="content-title">
+        <div class="content-title" id="cd">
             <h1 class="content-header" id="content-header">grow with us</h1>
             <p class="content-text" id="content-text">Become a part of something great. Join us and together, we can help you grow your business from a simple local
                 business to a far and widespread and recognizable brand both locally and internationally</p>
