added contact form

--- a/index.html
+++ b/index.html
@@ -220,8 +220,37 @@
 
             </div>
         </div>
+    </div>
 
+    <!-- CONTACT FORM -->
+    <div class="contact-container">
+        <div class="contact-wrapper">
+            <h2 class="contact-header">Contact Us</h2>
+            <div class="form-content">
+                <form action="">
+                    <p>
+                        <label>Name</label>
+                        <input type="text" name="email">
+                    </p>
+                    <p>
+                        <label>Email</label>
+                        <input type="text" name="email">
+                    </p>
+                    <p>
+                        <label>Phone</label>
+                        <input type="text" name="phone">
+                    </p>
+                    <p class="full">
+                        <label>Message</label>
+                        <Textarea name="message" rows="5"></Textarea>
+                    </p>
+                    <p class="full">
+                        <button type="submit">Submit</button>
+                    </p>
+                </form>
+            </div>
 
+        </div>
     </div>
 
 
