Finished designing the page! YAYYY
Need to add backend for contact form and add scrolling

--- a/index.html
+++ b/index.html
@@ -253,6 +253,21 @@
         </div>
     </div>
 
+    <!-- Footer -->
+
+    <footer class="footer">
+        <div class="social">
+            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+            <i class="fa fa-twitter-square" aria-hidden="true"></i>
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+        </div>
+        <div class="footer-info">
+            <p>Template page created by <span>Mohamed Shaah Ahmed</span></p>
+            <p>copyright&copy 2017</p>
+        </div>
+
+    </footer>
+
 
 
 
