added meta tags
made it a bit SEO friendly

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Shaah Ahmed Web Design and Development Github</title>
+    <meta name="Description" content="This is a template page made to showcase and test my web development skills. ">
+    <meta name="Keywords" content="Mohamed, Shaah, Ahmed, Github, Web, Development">
 
     <link rel="stylesheet" href="./css/vendor/normalize.css">
     <link rel="stylesheet" href="./css/vendor/animate.css">
@@ -13,8 +16,6 @@
 
     <script src="https://use.fontawesome.com/aa106c1952.js"></script>
 
-
-    <title>Design and Development</title>
 
 </head>
 
